test/compilable/fwdref10015.d
struct S(T) { alias X = int; }

alias Y = s.X;
S!int s;
