test/fail_compilation/fail342.d
struct Move{
    int Dx;
}
template genMove(){
    enum Move genMove = { Dx:4 };
}
enum Move b = genMove!();
